Applying script for a new data

--- a/data_prep.ipynb
+++ b/data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'d:\\\\Projects\\\\Machine Learning\\\\Lummm'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,26 +35,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "healthycows, lumpycows = [], []\n",
+    "healthy_path = \"data/total_healthy/\"\n",
+    "lumpy_path = \"data/total_lumpy/\"\n",
     "SIZE = (225, 225)\n",
-    "for filename in os.listdir(\"data/healthycows/\"):\n",
-    "    img = cv2.imread(os.path.join(\"data/healthycows/\", filename))\n",
+    "for filename in os.listdir(healthy_path):\n",
+    "    img = cv2.imread(os.path.join(healthy_path, filename))\n",
     "    img = cv2.resize(img, SIZE)\n",
     "    cv2.imwrite(os.path.join(\"resized_data\", \"healthycows\", filename), img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for filename in os.listdir(\"data/lumpycows/\"):\n",
-    "    img = cv2.imread(os.path.join(\"data/lumpycows/\", filename))\n",
+    "for filename in os.listdir(lumpy_path):\n",
+    "    img = cv2.imread(os.path.join(lumpy_path, filename))\n",
     "    img = cv2.resize(img, SIZE)\n",
     "    cv2.imwrite(os.path.join(\"resized_data\", \"lumpycows\", filename), img)"
    ]
